Fix(poll): some more poll touch-ups